--- a/redesign/style.css
+++ b/redesign/style.css
@@ -6,15 +6,6 @@ body {
     color: #852614
 }
 
-/* nav ul li a:hover, nav ul li a:focus {
-    background-color: white;
-    font-weight: bold;
-  } */
-
-/* .collapse {
-    display: block;
-} */
-
 #nav_header:hover, #nav_header:focus {
     font-weight: bold;
 }
@@ -44,7 +35,9 @@ h1 {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: calc(70vh - 40px);
+    padding-top: 10%;
+    /* height:fit-content; */
+    height: calc(fit-content - 56px);
 }
 
 h3 {
@@ -77,6 +70,10 @@ h5 {
     margin: 50px;
 }
 
+/* #adblocks {
+    margin: 10px;
+} */
+
 #ad_block1 {
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)), url(../images/adblock1.jpeg);
     background-position: center;
@@ -99,7 +96,7 @@ h5 {
 .btn-lg {
     color: white;
     background-color: #d8cdb5;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 }
 
 /* .btn-lg:hover, .btn-lg:focus {
@@ -132,9 +129,9 @@ h5 {
 }
 
 h2 {
-    margin-top: 50px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
     /* margin-bottom: 20px; */
     height: 65%;
 }
@@ -236,6 +233,10 @@ h6.stay {
 
 .form-inline {
     display: inline-flex;
+}
+
+.form-group {
+    margin-bottom: 0;
 }
 
 .btn-md {
